# Shellock

./: .gitignore  README.md  TEAM_HANDOFF.md  gaps.txt  pyproject.toml  report.tex
shellock_core/: __init__.py  cli.py  module_base.py
shellock_core/core/: adaptive.py  context.py  dispatcher.py  import_scanner.py  knowledge.py  llm.py  module_loader.py  onboarding.py  registry.py  schemas.py  ui.py
shellock_core/modules/node/: __init__.py  module.py  templates.py
shellock_core/modules/node/knowledge/: errors.json
shellock_core/modules/python/: __init__.py  module.py  templates.py
shellock_core/modules/python/knowledge/: errors.json
shellock_core/tools/: web_search.py
test_run/project/: app.py
tests/: test_cli.py  test_core.py  test_knowledge.py  test_modules.py  test_new_features.py
